Change to mongo for db host
